--- a/fitjournal-frontend/src/style/containers.css
+++ b/fitjournal-frontend/src/style/containers.css
@@ -4,5 +4,5 @@
     background-color: rgb(242, 244, 247);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
 }
